fix: Adjusted footer layout and spacing

--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,29 @@ a {
 *::before,
 *::after {
     box-sizing: border-box;
-    
-    
+      
+}
+.container {
+    width: 1440px;
+    margin: 0;
+
+}
+.sr-only {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    margin: -1px;
+}
+h1, h2, h3,p {
+    margin: 0;
+}
+ul{
+    margin: 0;
+    padding-left: 0;
 }
