--- a/css/features.css
+++ b/css/features.css
@@ -1,7 +1,6 @@
 .features {
-    width: 1440px;
     height: 344px;
-    padding: 0px 120px;
+    padding: 120px 0px;
     gap: 24px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -13,7 +12,7 @@
 .features-title {
     font-size: 36px;
     text-align: center;
-    display: none;
+    
     
 
 }
@@ -34,7 +33,7 @@
     
 }
 .features ul {
-    width: 1158px;
+    
     height: 104px;
     padding: 15px 0px;
     gap: 24px;
