--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,7 @@
 .section-footer {
     background-color: #2e2f42;
-    color: #ffffff;
-    width: 1440px;
-    
+    color: #ffffff;    
     gap: 0px;
-    padding: 0px 100px;
 }
 
 .section-footer .logo {
@@ -24,13 +21,10 @@
     font-weight: 400;
     letter-spacing: 0.02em;
 }
-.section-footer a, 
-.section-footer p {
-    max-width: 264px;
-    height: 112px;
+.foot {
     gap: 0px;
-    padding: 15px 0px;
+    padding: 100px 100px;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 16px;
+
 }
