--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,13 @@
 
 .section-header {
     background-color: #ffffff;
-    border: 1px solid #E7E9FC;
+    border-bottom: 1px solid #E7E9FC;
     padding: 0px;
     display:flex;
     gap: 40px;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0px;
-    width: 1440px;
-    height: 72px;
-}
+}    
 
 .menu {
     display: flex;
@@ -37,9 +34,7 @@
 .nav {
     gap: 40px;
     padding: 0px;
-    border-radius: 0px;
     align-items: center;
-    justify-content: space-between;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -55,7 +50,6 @@
 .contacts {
     padding: 0px;
     gap: 8px;
-    border-radius: 0px;
     align-items: center;
     font-style: normal;
 }
