--- a/css/hero.css
+++ b/css/hero.css
@@ -6,9 +6,8 @@
     align-items: center;
     justify-content: center;
     border: 1px solid #000000;
-    width: 1440px;
     height: 600px;
-    padding: 0px 188px;
+
 }
 
 .hero-title {
@@ -19,8 +18,7 @@
     letter-spacing: 0.02em;
     width: 496px;
     height: 120px;
-    gap: 48px;
-    padding: 15px 0px;
+    
 
 }
 
@@ -32,9 +30,9 @@
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    padding: 32px 16px;
-    height: 56px;
+    padding: 16px 32px;
     text-align: center ;
+    margin-top: 50px
 }
 
 .hero-button:hover,
